
*********************************************************************************************
*                                  CHANGE LOG 1.0.1 - > 1.1.0                               *
*********************************************************************************************

 * (02/06/2012) kivan
	# 255
	
	ADDED: GUI part of Import Wizard for importing data files into database.
	ADDED: ImportFilesTableModel - data model for table in Import Wizard.
	CHANGED: some POJO classes of db extended of toString method
	ADDED: added action to Import to DB buttons in EDEDB

 * (02/06/2012) kivan
	# 254
	
	ADDED: BlobViewer: so far only for text files. (issue with Blob.getBinaryStream().read(byte[]) - does not read whole blob, god knows why. Working workaround with Blob.getBytes)
	CHANGED: DataFilesTable: after double-click on data file, BlobViewer is opened.
	CHANGED: Removed dependency on ExperimentTable value od id - value is not converted from view to model wherever is needed.

 * (02/05/2012) kivan
	# 253
	
	CHANGED: way of creating experiment view is a bit different now (more separate classes) - necessary because of MouseListener in each table.
	CHANGED: HibernateUtil.rebind - new method for rebinding object which was not fully loaded from db (Lazy loading issue)
	ADDED: Double-click on experiment in EDEDB now opens dialog with basic information about experiment itself (not editable for now)

 * (01/26/2012) kivan
	# 252
	
	INTERNAL: SQL and DB structure changed - some tables now have field CHANGED due to comming need of sync files with EEG base
	CHANGED: added button of Import files (no functionality now), JerpaLang updated. Few minor bug fixes.

 * (01/25/2012) kivan
	# 251
	
	FIXED: fixed FileState of file, which is being downloaded
	"FIXED": EDEDB and its components fails to use Look And Feel as the rest of the app (??), at least mainPanel set manually

 * (01/25/2012) kivan
	# 250
	